examples/errors/redeclare.al
main :: proc () {
	a := 5
	a := 5
}
